[gd_scene load_steps=6 format=2]

[ext_resource path="res://hud/jukebox/SongEntry.gd" type="Script" id=1]
[ext_resource path="res://graphics/jukebox/play-normal.png" type="Texture" id=2]
[ext_resource path="res://graphics/jukebox/paused-pressed.png" type="Texture" id=3]
[ext_resource path="res://graphics/jukebox/up_normal.png" type="Texture" id=4]
[ext_resource path="res://graphics/jukebox/down_normal.png" type="Texture" id=5]

[node name="SongEntry" type="HBoxContainer"]
margin_right = 162.0
margin_bottom = 13.0
script = ExtResource( 1 )

[node name="Play" type="TextureButton" parent="."]
visible = false
margin_right = 10.0
margin_bottom = 14.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
stretch_mode = 3

[node name="Title" type="Label" parent="."]
margin_right = 134.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "12 Mornings - Jason Shaw"
valign = 1
clip_text = true

[node name="MoveUp" type="TextureButton" parent="."]
margin_left = 138.0
margin_right = 148.0
margin_bottom = 14.0
texture_normal = ExtResource( 4 )
stretch_mode = 3

[node name="MoveDown" type="TextureButton" parent="."]
margin_left = 152.0
margin_right = 162.0
margin_bottom = 14.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[connection signal="pressed" from="MoveUp" to="." method="_on_MoveUp_pressed"]
[connection signal="pressed" from="MoveDown" to="." method="_on_MoveDown_pressed"]
